--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 
    <h1>Hello World!</h1>
+   <div><img src="join the Competition and Showcase Your Robotics Skills!.png" alt="Hello World from Space "
+             style="width:30%;max-width:760px">
+   </div>
    <p>This is my first file in my new Git Repo.</p>
+   <p>A new line in our file!</p>
+
 
 </body>
+</html>
