updated index.html with emergency fix

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 
    <h1>Hello World!</h1>
    <p>This is my first file in my new Git Repo.</p>
+  <P> This line is here to show how merging works.</P>
 
 </body>
+</html>
