added new image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
              style="width:30%;max-width:760px">
    </div>
    <p>This is my first file in my new Git Repo.</p>
-   <p>A new line in our file!</p>
+   <p> new line in our file!</p>
+ <div><img src="join the Competition and Showcase Your Robotics Skills!.png" alt="Hello Git" style="width:30%;max-width:540px">
+     </div>
 
 
 </body>
